# situation-puzzle

./: Cargo.toml  README.md  Secret.toml.sample  flowchart.drawio
docs/: flowchart.md
example/: api.rs  handle_command.rs
src/: api.rs  chat_completion.rs  config.rs  handlers.rs  main.rs
src/api/: mod.rs  openai_client.rs
src/constants/: prompt.rs
src/handlers/: bot.rs  command.rs  component.rs  message.rs  mod.rs
src/models/: chat_completion.rs  mod.rs  state.rs
src/utils/: question_generator.rs
