[package]
name = "situation-puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serde = "1.0.156"
serde_json = "1.0.127"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.47.0"
shuttle-serenity = "0.47.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = "1.26.0"
tracing = "0.1.37"
